--- a/web/themes/custom/atrium/src/sass/layout/_page.scss
+++ b/web/themes/custom/atrium/src/sass/layout/_page.scss
@@ -21,8 +21,22 @@ footer {
   flex-shrink: 0;
 }
 
+.jcc-header-hat {
+  .jcc-global__menu {
+    @include at-media-max(desktop) {
+      display: none;
+    }
+  }
+}
+
 .jcc-header-base {
   .path-frontpage & {
     display: none;
+  }
+
+  .jcc-nav-secondary__menu {
+    @include at-media(desktop) {
+      display: none;
+    }
   }
 }
